support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_extra_brackets2.stderr
cpp_extra_brackets2.i:6: Error: Syntax error in input(3).
